--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "parcel-js-axios-lodash-template",
   "version": "1.0.0",
   "scripts": {
-    "dev": "parcel public/index.html"
+    "dev": "parcel public/index.html",
+    "build": "parcel build public/index.html"
   },
   "devDependencies": {
     "parcel-bundler": "^1.12.5"
